[package]
name = "abi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
clap = { version = "4.5.4", features = ["derive", "string"] }
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.interface]
path = "example/interface"
